--- a/desafios/desafio.html
+++ b/desafios/desafio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contagem Regreciva</title>
     <script src="01.js"></script>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
