mais algumas atividades

--- a/desafio01/desafio.html
+++ b/desafio01/desafio.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contagem Regreciva</title>
-    <script src="01.js"></script>
+    <script src="codigo.js"></script>
     <link rel="stylesheet" href="estilo.css">
+    <title>Aperte nos 3</title>
 </head>
-
 <body>
-    <div>
-        <h1>Vamos Contar de 10 a 0?</h1>
-        <p>
-            Aperte no botão para contar.  <input type="button" value="Contar" onclick="contar()">
-        </p>
-        <p id="res"> CONTAGEM...</p>
-    </div>
-
+    <h1 class="g"> <input type="button" value="Botão1" onclick="valor1()"> <input type="button" value="Botão2" onclick="valor2()"> <input type="button" value="Botão 3" onclick="valor3()">
+    
+    </h1>
 </body>
-
 </html>
