--- a/desafio03/index.html
+++ b/desafio03/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOMES</title>
     <link rel="stylesheet" href="estilo.css">
     <script src="codigos.js"></script>
+    <title>Antecessor e sucessor</title>
 </head>
-
 <body>
-    <section>
-    <h1>Boas-Vindas!</h1>
-    
-        <p id="but"> <input type="button" value="INICIE O DESAFIO" onclick="desafio()"></p>
-    </section>
+   <section>
+    <h1>Antes e depois</h1>
+    <hr>
+    <p><input type="button" value="Antecessor e sucessor" onclick="contador()"></p>
+    <p id="res"></p>
+   </section>
 </body>
-
 </html>
