--- a/desafio04/index.html
+++ b/desafio04/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOMES</title>
-    <link rel="stylesheet" href="estilo.css">
     <script src="codigos.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Troco</title>
 </head>
-
 <body>
     <section>
-    <h1>Boas-Vindas!</h1>
-    
-        <p id="but"> <input type="button" value="INICIE O DESAFIO" onclick="desafio()"></p>
+        <h1>Calculando  o troco</h1>
+        <p> <input type="button" value="Comprar produto" onclick="troco()"></p>
+        <p id="res"></p>
     </section>
 </body>
-
 </html>
