--- a/desafio13/desafio.html
+++ b/desafio13/desafio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,15 @@
     <link rel="stylesheet" href="estilo.css">
     <title>Notas do Aluno</title>
 </head>
+
 <body>
-    <h1>Situação do aluno.</h1>
-    <p><input type="button" value="Entrar com as notas." onclick="notas()"></p>
-    <p>Clique no botão acima para mandar as notas do aluno.</p>
-    <p id="res">RESULTADOS...</p><p id="sit"></p>
-   
+    <section>
+        <h1>Situação do aluno.</h1>
+        <p><input type="button" value="Entrar com as notas." onclick="notas()"></p>
+        <p>Clique no botão acima para mandar as notas do aluno.</p>
+        <p id="res">RESULTADOS...</p>
+        <p id="sit"></p>
+    </section>
 </body>
+
 </html>
