--- a/desafio13/desafio.html
+++ b/desafio13/desafio.html
@@ -14,8 +14,8 @@
         <h1>Situação do aluno.</h1>
         <p><input type="button" value="Entrar com as notas." onclick="notas()"></p>
         <p>Clique no botão acima para mandar as notas do aluno.</p>
-        <p id="res">RESULTADOS...</p>
-        <p id="sit"></p>
+        <p id="res">RESULTADOS... <p id="sit"></p></p>
+        
     </section>
 </body>
 
